<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sign_in_background"
    android:orientation="vertical"
    tools:context=".ProfileFragment">

    <ImageView
        android:id="@+id/iv_image"
        android:layout_width="@dimen/photo_user_size"
        android:layout_height="@dimen/photo_user_size"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/margin_100"
        android:src="@drawable/ic_baseline_person_24" />
<!--    android:visibility="gone"-->
    <LinearLayout
        android:visibility="gone"
        android:id="@+id/ll_info_user_sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_margin="@dimen/margin_normal"
        android:padding="@dimen/padding_big"
        android:layout_marginTop="@dimen/margin_big"
        android:background="@color/design_default_color_on_primary">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="1">

            <TableRow android:layout_marginBottom="@dimen/margin_normal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/display_name" />

                <TextView
                    android:id="@+id/tv_display_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="le trung cu" />
            </TableRow>

            <TableRow android:layout_marginBottom="@dimen/margin_normal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email" />

                <TextView
                    android:id="@+id/tv_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="le trung cu" />
            </TableRow>
        </TableLayout>

        <Button
            android:id="@+id/btn_sign_out"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/sign_out" />
    </LinearLayout>

    <LinearLayout
        android:visibility="gone"
        android:id="@+id/ll_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="350dp"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:gravity="center"
        android:padding="@dimen/padding_big"
        android:layout_marginTop="@dimen/margin_big"
        android:background="@color/design_default_color_on_primary">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/you_are_not_sign_in"
            android:layout_marginBottom="@dimen/margin_normal"/>
        <Button
            android:id="@+id/btn_sign_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"/>
    </LinearLayout>
</LinearLayout>